--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
@@ -320,9 +320,14 @@
 
 
         <!-- begin::Pagination -->
-        <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
+        <!-- <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
             style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
-        </pagination-controls>
+        </pagination-controls> -->
+        
+        <div class="text-md-right float-md-end pagination-rounded">
+            <ngb-pagination [collectionSize]="mappingAccData2.length" [(page)]="p" [pageSize]="10"
+                [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+        </div>
         <!-- end::Pagination -->
     </div>
 
