changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -820,7 +820,7 @@
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div *ngIf="isCredit" class="menu-item menu-accordion">
           <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-            routerLink="/credit/bookLedger">
+            routerLink="/ledger/credit">
             <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
@@ -841,7 +841,7 @@
         </div>
         <div *ngIf="isAccounting" class="menu-item menu-accordion">
           <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-            routerLink="/accounting/book">
+            routerLink="/ledger/accounting">
             <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
@@ -862,7 +862,7 @@
         </div>
         <div *ngIf="isdsr" class="menu-item menu-accordion">
           <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-            routerLink="/dsr/dsrDetails">
+            routerLink="/ledger/dsr">
             <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
@@ -914,7 +914,7 @@
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
             <div *ngIf="isLedgerShiftWise" class="menu-item menu-accordion">
               <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-                routerLink="/shift/shiftWise">
+                routerLink="/ledger/shiftWise">
                 <span class="menu-link">
                   <span class="menu-bullet">
                     <span class="bullet bullet-dot"></span>
@@ -935,7 +935,7 @@
             </div>
             <div *ngIf="isLedgerDayWise" class="menu-item menu-accordion">
               <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-                routerLink="/shift/dayWise">
+                routerLink="/ledger/dayWise">
                 <span class="menu-link">
                   <span class="menu-bullet">
                     <span class="bullet bullet-dot"></span>
@@ -956,7 +956,7 @@
             </div>
             <div *ngIf="isLedgerMonthWise" class="menu-item menu-accordion">
               <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-                routerLink="/shift/monthWise">
+                routerLink="/ledger/monthWise">
                 <span class="menu-link">
                   <span class="menu-bullet">
                     <span class="bullet bullet-dot"></span>
@@ -977,7 +977,7 @@
             </div>
             <div *ngIf="isLedgerShiftTimeWise" class="menu-item menu-accordion">
               <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-                routerLink="/shift/shiftTimeWise">
+                routerLink="/ledger/shifttimeWise">
                 <span class="menu-link">
                   <span class="menu-bullet">
                     <span class="bullet bullet-dot"></span>
@@ -998,7 +998,7 @@
             </div>
             <div *ngIf="isBookOperatorWise" class="menu-item menu-accordion">
               <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-                routerLink="/shift/operatorWise">
+                routerLink="/ledger/operaterWise">
                 <span class="menu-link">
                   <span class="menu-bullet">
                     <span class="bullet bullet-dot"></span>
