--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
@@ -69,13 +69,42 @@
                   <i class="fas fa-edit" style="color: #4e9b4e;">
                   </i> &nbsp;Add/ Edit</a>
                 <a class="dropdown-item" href="javascript: void(0);"
-                  (click)="askForPass(PasswordTemplate,data.idfuelShiftDetails)">
+                  (click)="askForConfirmDelete(confirmdeleteTemplate, data.idfuelShiftDetails)">
                   <i class="fas fa-ban" style="color: red;"></i> &nbsp; Remove</a>
               </div>
             </div>
           </td>
 
         </tr>
+        
+      <ng-template #confirmdeleteTemplate let-c="close" let-d="dismiss">
+        <div class="modal-header">
+          <h4 class="modal-title">
+            <label>
+              <h6>
+                "Dear Customer, if you delete this shift the credit sales added in this shift will also be deleted. Do you want to delete the shift..!"
+              </h6>
+            </label>
+          </h4>
+          <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-2">
+              <button class="btn btn-outline-success my-2 my-sm-0"
+                (click)="askForPass(PasswordTemplate,data.idfuelShiftDetails)">YES</button>
+            </div>
+            <div class="col-auto">
+              <button type="button" class="btn btn-danger" aria-label="Close"
+                (click)="d('Cross click')">No</button>
+            </div>
+          </div>
+        </div>
+      </ng-template>
 
       </tbody>
     </table>
