--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget7/lists-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget7/lists-widget7.component.html
@@ -63,7 +63,7 @@
                         <a class="dropdown-item" href="javascript: void(0);" (click)="routeShift(data.openDate)">
                           <i class="fas fa-edit" style="color: #4e9b4e;"></i> &nbsp;Edit</a>
                         <a class="dropdown-item" href="javascript: void(0);"
-                          (click)="askForConfirmDelete(confirmdeleteTemplate, data.idfuelShiftDetails, data.openDate)">
+                          (click)="askForConfirmDelete(confirmdeleteTemplate)">
                           <i style="color:red" class="fa fa-ban"></i> &nbsp; Remove</a>
                       </div>
                     </div>
@@ -163,7 +163,7 @@
         <div class="modal-body">
 
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
             </div>
             <div class="col-auto">
               <button type="submit" class="btn btn-outline-success my-2 my-sm-0"
