--- a/src/app/pages/dealer/shift/day-wise/day-wise.component.html
+++ b/src/app/pages/dealer/shift/day-wise/day-wise.component.html
@@ -1,6 +1,6 @@
 
 <div class="card-header">
-    <b>Shift Wise</b>
+    <b>Day Wise</b>
 </div>
 <!-- begin::Header -->
 <div class="card-header border-0 pt-5">
