--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
@@ -308,7 +308,7 @@
               <div class="position-relative">
                 <input class="form-control mr-sm-4" type="text" placeholder="search"
                   oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                  [formControl]="searchBox" aria-label="Search..." (click)="searchInTable()">
+                  [formControl]="searchBox" aria-label="Search" (click)="searchInTable()">
                 <i class="bx bx-search-alt search-icon"></i>
               </div>
 
@@ -736,7 +736,9 @@
           <div class="col-sm-10">
             <div class="search-box me-4 mb-4 d-inline-block">
               <div class="position-relative">
-                <input type="text" class="form-control" placeholder="Search..." [(ngModel)]="searchBox">
+                <input class="form-control mr-sm-4" type="text" placeholder="search"
+                  oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                  [formControl]="searchBox" aria-label="Search" (click)="searchInTable()">
                 <i class="bx bx-search-alt search-icon"></i>
               </div>
             </div>
