changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -807,14 +807,14 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8 outerBoxStyle">
                           <div class="row" style="font-size: 13px; font-weight: 600;">&nbsp;
-                            <!-- {{companyName}} -->
+                            {{companyName}}
                           </div>
 
-                          <!-- <div class="row">&nbsp;&nbsp; {{headQuarterName}}</div> -->
+                          <div class="row">&nbsp;&nbsp; {{headQuarterName}}</div>
 
-                          <!-- <div class="row">&nbsp;&nbsp; CONTACT NO &nbsp;:&nbsp; {{managerMobile}}</div> -->
+                          <div class="row">&nbsp;&nbsp; CONTACT NO &nbsp;:&nbsp; {{managerMobile}}</div>
 
-                          <!-- <div class="row">&nbsp;&nbsp; GST NO &nbsp;:&nbsp; {{GSTNumber}}</div> -->
+                          <div class="row">&nbsp;&nbsp; GST NO &nbsp;:&nbsp; {{GSTNumber}}</div>
 
                           <div class="row">
                             <div class="col-md-12" style="text-align: left;">
@@ -1721,14 +1721,14 @@
                   <div class="col-md-2"></div>
                   <div class="col-md-8 outerBoxStyle">
                     <div class="row" style="font-size: 13px; font-weight: 600;">&nbsp;
-                      <!-- {{companyName}} -->
+                      {{companyName}}
                     </div>
 
-                    <!-- <div class="row">&nbsp;&nbsp; {{headQuarterName}}</div> -->
+                    <div class="row">&nbsp;&nbsp; {{headQuarterName}}</div>
 
-                    <!-- <div class="row">&nbsp;&nbsp; CONTACT NO &nbsp;:&nbsp; {{managerMobile}}</div> -->
+                    <div class="row">&nbsp;&nbsp; CONTACT NO &nbsp;:&nbsp; {{managerMobile}}</div>
 
-                    <!-- <div class="row">&nbsp;&nbsp; GST NO &nbsp;:&nbsp; {{GSTNumber}}</div> -->
+                    <div class="row">&nbsp;&nbsp; GST NO &nbsp;:&nbsp; {{GSTNumber}}</div>
 
                     <div class="row">
                       <div class="col-md-12" style="text-align: left;">
